[package]
name = "windowed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit_input_helper = "0.14"
winit = "0.28"

wgpu_shader_boilerplate.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
glam.workspace = true

env_logger.workspace = true
log.workspace = true

camera.workspace = true
camera_input.workspace = true
